Fixed search input shifted up on firefox.

--- a/less/room.less
+++ b/less/room.less
@@ -173,8 +173,6 @@
             padding: 0;
             padding-right: 10px;
             position: absolute;
-            top: 0;
-            bottom: 0;
             left: 0;
             right: 0;
             width: 100%;
